# android-ndk

./: .gitignore  test
audio-echo/app/src/main/java/com/google/sample/echo/: MainActivity.java
builder/: build.gradle  local.properties
builder/src/test/java/: GradleBuildTest.java
camera/common/utils/: camera_utils.cpp
gles3jni/: README.md
hello-cdep/: build.gradle-orig
issue423/: .gitignore  settings.gradle
issue423-II/: README.txt
issue423-II/app/: build.gradle
issue423-II/app/src/androidTest/java/com/google/sample/demoapp/: ExampleInstrumentedTest.java
issue423-II/app/src/main/jni/: mainactivity.cpp
issue423-II/app/src/main/res/layout/: activity_main.xml
issue423-II/app/src/test/java/com/google/sample/demoapp/: ExampleUnitTest.java
issue423-II/gradle/wrapper/: gradle-wrapper.properties
issue423-II/jniLib/: build.gradle
issue423-II/jniLib/src/androidTest/java/com/google/sample/jnilib/: ExampleInstrumentedTest.java
issue423-II/jniLib/src/main/cpp/: CMakeLists.txt
issue423-II/jniLib/src/main/java/com/google/sample/jnilib/: AndroidService.java
issue423-II/jniLib/src/test/java/com/google/sample/jnilib/: ExampleUnitTest.java
issue423-II/native/: build.gradle
issue423-II/native/src/androidTest/java/com/google/sample/anative/: ExampleInstrumentedTest.java
issue423-II/native/src/main/: AndroidManifest.xml
issue423-II/native/src/main/cpp/: CMakeLists.txt
issue423-II/native/src/test/java/com/google/sample/anative/: ExampleUnitTest.java
issue423/app/src/main/: AndroidManifest.xml
issue423/app/src/main/java/com/google/sample/demoapp/: MainActivity.java
issue423/app/src/main/jni/: CMakeLists.txt  mainactivity.c
issue423/jniLib/: build.gradle
issue423/jniLib/src/main/: AndroidManifest.xml
issue423/jniLib/src/main/cpp/: CMakeLists.txt
issue423/jniLib/src/main/cpp/src/: jniLib.c  jniLib.h
issue423/jniLib/src/main/res/values/: strings.xml
issue423/native/: build.gradle
issue423/native/src/main/cpp/: CMakeLists.txt
issue423/native/src/main/cpp/src/: native.c
